--- a/.github/workflows/Kernel Build (guacamole).yml
+++ b/.github/workflows/Kernel Build (guacamole).yml
@@ -16,7 +16,7 @@ on:
         required: true
       CODENAME:
         description: 'Phone Codename'
-        default: 'sm8150-perf'
+        default: 'vendor/sm8150-perf'
         required: true
       ANYKERNEL_URL:
         description: 'AnyKernel Url (leave blank if you dont want AnyKernel)'
