--- a/.github/workflows/Kernel Build (guacamole).yml
+++ b/.github/workflows/Kernel Build (guacamole).yml
@@ -8,11 +8,11 @@ on:
         required: false
       KERNEL_TREE:
         description: 'Kernel Tree'
-        default: 'https://github.com/Whitefx274/android_kernel_oneplus_sm8150'
+        default: 'https://github.com/LineageOS/android_kernel_oneplus_sm8150'
         required: true
       KERNEL_TREE_BRANCH:
         description: 'Kernel Tree Branch'
-        default: 'android-12.1'
+        default: 'lineage-21'
         required: true
       CODENAME:
         description: 'Phone Codename'
